# kinopoisk_bot_tg

./: README.md  create_bot.py  main.py  pyproject.toml  requirements.txt
data_base/: sqlite_db.py
handler/: __init__.py  client.py  films_command.py  other.py  send_request.py
keyboards/: client_kb.py
kinopoisk/: create_kinopoisk.py
